fix: fix sidebar button center align

--- a/src/app.scss
+++ b/src/app.scss
@@ -42,6 +42,7 @@ section {
       justify-content: center;
       align-items: center;
       height: 100vh;
+      padding: 0% 15%;
 
       img {
         width: 100%;
@@ -51,6 +52,7 @@ section {
       h1 {
         padding: 0% 10%;
         text-align: center;
+        font-size: 20px;
       }
     }
   }
