--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -39,8 +39,8 @@
     height: 50px;
     border-radius: 50%;
     position: fixed;
-    top: 25px;
-    left: 25px;
+    top: 30px;
+    left: 26px;
     background-color: transparent;
     border: none;
     cursor: pointer;
